# table-metric-study

./: .gitignore  README.md  all_tables.json  all_tables.jsonl  build_jsonl.py  compute_llm_scores.py  compute_metrics.py  compute_tabxeval_scores.py  correlation_analysis.py  human_eval.py  latex_to_html_claude.py  pyproject.toml
scorers/: grits.py  normalize.py  score_benchmark.py  teds.py
scorers/tabxeval/: __init__.py  align_prompt.txt  compare_prompt.txt  comparison.py  fuzzy_matching.py  pipeline.py  scoring.py
